# compoundlib

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  showcase.py  test_manual.py
compoundlib/: __init__.py  advanced.py  basic.py
tests/: test_basic.py
