[metadata]
name = compoundlib
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A Python library for compound interest calculations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YOUR_USERNAME/compoundlib
project_urls =
    Bug Tracker = https://github.com/YOUR_USERNAME/compoundlib/issues
    Documentation = https://github.com/YOUR_USERNAME/compoundlib#readme
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =

[options.packages.find]
where = .
exclude =
    tests
    tests.*
    docs
    docs.*

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0

[egg_info]
tag_build =
tag_date = 0